@@ -41,7 +41,7 @@ public class PickupCoil extends AbstractCoil implements ModelElement, SimpleObse
     private double _biggestEmf; // in volts
     private Point2D _samplePoints[]; // B-field sample points
     private SamplePointsStrategy _samplePointsStrategy;
-    private double _fudgeFactor; // see setFudgeFactor
+    private double _transitionSmoothingScale; // see setter
     
     // Reusable objects
     private AffineTransform _someTransform;
@@ -82,7 +82,7 @@ public class PickupCoil extends AbstractCoil implements ModelElement, SimpleObse
         
         _samplePointsStrategy = samplePointsStrategy;
         _samplePoints = null;
-        _fudgeFactor = 1.0;
+        _transitionSmoothingScale = 1.0; // no smoothing
         
         _averageBx = 0.0;
         _flux = 0.0;
@@ -186,38 +186,41 @@ public class PickupCoil extends AbstractCoil implements ModelElement, SimpleObse
     }
     
     /**
-     * Sets the fudge factor. This is used to scale the B-field for sample points inside the magnet,
+     * Sets a scaling factor used to smooth out abrupt changes that occur when
+     * the magnet transitions between being inside & outside the coil.
+     * <p> 
+     * This is used to scale the B-field for sample points inside the magnet,
      * eliminating abrupt transitions at the left and right edges of the magnet. For any sample
      * point inside the magnet, the B field sample is multiplied by this value.
      * <p>
      * To set this value, follow these steps:
      * <ol>
-     * <li>enable the developer controls for "pickup coil fudge factor" and "display flux"
+     * <li>enable the developer controls for "pickup transition scale" and "display flux"
      * <li>move the magnet horizontally through the coil until, by moving it one pixel, 
      *     you see an abrupt change in the displayed flux value.
      * <li>note the 2 flux values when the abrupt change occurs
      * <li>move the magnet so that the larger of the 2 flux values is displayed
-     * <li>adjust the fudge factor control until the larger value is reduced
+     * <li>adjust the developer control until the larger value is reduced
      *     to approximately the same value as the smaller value.
      * </ol>
      * 
-     * @param fudgeFactor 0 < fudgetFactor <= 1
+     * @param scale 0 < scale <= 1
      */
-    public void setFudgeFactor( double fudgeFactor ) {
-        if ( fudgeFactor <= 0 || fudgeFactor > 1 ) {
-            throw new IllegalArgumentException( "fudgetFactor must be > 0 and <= 1: " + fudgeFactor );
+    public void setTransitionSmoothingScale( double scale ) {
+        if ( scale <= 0 || scale > 1 ) {
+            throw new IllegalArgumentException( "scale must be > 0 and <= 1: " + scale );
         }
-        _fudgeFactor = fudgeFactor;
+        _transitionSmoothingScale = scale;
         // no need to update, wait for new clock tick
     }
     
     /**
-     * Gets the fudget factor. See setFudgeFactor.
+     * See setTransitionSmoothingScale.
      * 
      * @return
      */
-    public double getFudgeFactor() {
-        return _fudgeFactor;
+    public double getTransitionSmoothingScale() {
+        return _transitionSmoothingScale;
     }
     
     //----------------------------------------------------------------------------
@@ -360,7 +363,7 @@ public class PickupCoil extends AbstractCoil implements ModelElement, SimpleObse
         _averageBx = sumBx / _samplePoints.length;
         
         // Flux in one loop.
-        double A = getLoopArea(); // scaling factor to account for variable loop area 
+        double A = getEffectiveLoopArea();
         double loopFlux = A * _averageBx; 
         
         // Flux in the coil.
@@ -420,7 +423,7 @@ public class PickupCoil extends AbstractCoil implements ModelElement, SimpleObse
              */ 
             double Bx = _sampleVector.getX();
             if ( Math.abs( Bx ) == magnetStrength ) {
-                Bx *= _fudgeFactor;
+                Bx *= _transitionSmoothingScale;
             }
             
             // Accumulate a sum of the sample points.
@@ -428,5 +431,23 @@ public class PickupCoil extends AbstractCoil implements ModelElement, SimpleObse
         }
         
         return sumBx;
+    }
+    
+    /*
+     * See Unfuddle #721.
+     * When the magnet is in the center of the coil, increasing the loop size should 
+     * decrease the EMF.  But since we are averaging sample points on a vertical line,
+     * multiplying by the actual area would (incorrectly) result in an EMF increase.
+     * The best solution would be to take sample points across the entire coil,
+     * but that requires many changes, so Mike Dubson came up with this workaround.  
+     * By fudging the area using a thin vertical rectangle, the results are qualitatively 
+     * (but not quantitatively) correct.
+     * 
+     * NOTE: This fix required recalibration of all the scaling factors accessible via developer controls.
+     */
+    private double getEffectiveLoopArea() {
+        double width = FaradayConstants.MIN_PICKUP_LOOP_RADIUS;
+        double height = 2 * getRadius();
+        return width * height;
     }
 }
